--- a/app/src/main/res/layout/bottomsheet_closed.xml
+++ b/app/src/main/res/layout/bottomsheet_closed.xml
@@ -1,7 +1,90 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/bottom_layout"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@color/colorPrimary">
+    android:layout_height="match_parent">
+
+    <ImageView
+        android:id="@+id/bottom_bg_image"
+        android:layout_width="0dp"
+        android:layout_height="64dp"
+        android:clickable="true"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/bottomsheet_bg" />
+
+    <ImageView
+        android:id="@+id/bottom_album_image"
+        android:layout_width="48dp"
+        android:layout_height="48dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginBottom="8dp"
+        app:layout_constraintBottom_toBottomOf="@id/bottom_bg_image"
+        app:layout_constraintEnd_toStartOf="@+id/bottom_song_title"
+        app:layout_constraintStart_toEndOf="@+id/bottom_bg_image"
+        app:layout_constraintStart_toStartOf="@id/bottom_bg_image"
+        app:layout_constraintTop_toTopOf="@id/bottom_bg_image"
+        app:srcCompat="@mipmap/ic_launcher_round" />
+
+    <TextView
+        android:id="@+id/bottom_song_title"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginBottom="8dp"
+        android:text="TextView"
+        app:layout_constraintBottom_toBottomOf="@+id/bottom_bg_image"
+        app:layout_constraintEnd_toStartOf="@+id/btnPrev"
+        app:layout_constraintStart_toEndOf="@+id/bottom_album_image"
+        app:layout_constraintTop_toTopOf="@+id/bottom_bg_image" />
+
+    <ImageButton
+        android:id="@+id/btnPrev"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="16dp"
+        android:background="@android:color/transparent"
+        android:onClick="onBtnPrevPressed"
+        app:layout_constraintBottom_toBottomOf="@+id/bottom_bg_image"
+        app:layout_constraintEnd_toStartOf="@+id/btnPlay"
+        app:layout_constraintStart_toEndOf="@+id/bottom_song_title"
+        app:layout_constraintTop_toTopOf="@+id/bottom_bg_image"
+        app:srcCompat="@android:drawable/ic_media_previous" />
+
+    <ImageButton
+        android:id="@+id/btnPlay"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp"
+        android:background="@android:color/transparent"
+        android:onClick="onBtnPlayPressed"
+        app:layout_constraintBottom_toBottomOf="@+id/bottom_bg_image"
+        app:layout_constraintEnd_toStartOf="@+id/btnNext"
+        app:layout_constraintStart_toEndOf="@+id/btnPrev"
+        app:layout_constraintTop_toTopOf="@+id/bottom_bg_image"
+        app:srcCompat="@android:drawable/ic_media_play" />
+
+    <ImageButton
+        android:id="@+id/btnNext"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="16dp"
+        android:background="@android:color/transparent"
+        android:onClick="onBtnNextPressed"
+        app:layout_constraintBottom_toBottomOf="@+id/bottom_bg_image"
+        app:layout_constraintEnd_toEndOf="@+id/bottom_bg_image"
+        app:layout_constraintStart_toEndOf="@id/btnPlay"
+        app:layout_constraintTop_toTopOf="@+id/bottom_bg_image"
+        app:srcCompat="@android:drawable/ic_media_next" />
 
 </android.support.constraint.ConstraintLayout>
