new datastructures in place

--- a/app/src/main/res/navigation/navgraph.xml
+++ b/app/src/main/res/navigation/navgraph.xml
@@ -12,10 +12,20 @@
         tools:layout="@layout/fragment_main" >
         <action
             android:id="@+id/action_to_artist"
-            app:destination="@id/destination_artist_detail" />
+            app:destination="@id/destination_artist_detail"
+            app:enterAnim="@anim/nav_default_enter_anim"
+            app:exitAnim="@anim/nav_default_exit_anim"
+            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
+            app:popExitAnim="@anim/nav_default_pop_exit_anim"
+            app:popUpTo="@+id/destination_main" />
         <action
             android:id="@+id/action_to_album"
-            app:destination="@id/destination_album_detail" />
+            app:destination="@id/destination_album_detail"
+            app:enterAnim="@anim/nav_default_enter_anim"
+            app:exitAnim="@anim/nav_default_exit_anim"
+            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
+            app:popExitAnim="@anim/nav_default_pop_exit_anim"
+            app:popUpTo="@+id/destination_main" />
     </fragment>
     <fragment
         android:id="@+id/destination_artist_detail"
