--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -32,15 +32,11 @@
     <FrameLayout
         android:id="@+id/main_bottomSheetFrame"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        app:behavior_hideable="false"
-        app:behavior_peekHeight="64dp"
-        app:behavior_skipCollapsed="false"
-        app:layout_behavior="android.support.design.widget.BottomSheetBehavior">
+        android:layout_height="match_parent">
 
         <include
             layout="@layout/bottomsheet_closed"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            android:layout_height="match_parent" />
     </FrameLayout>
 </android.support.design.widget.CoordinatorLayout>
