--- a/app/src/main/res/layout/bottomsheet_closed.xml
+++ b/app/src/main/res/layout/bottomsheet_closed.xml
@@ -65,7 +65,7 @@
         app:layout_constraintEnd_toStartOf="@+id/btnPlay"
         app:layout_constraintStart_toEndOf="@+id/bottom_song_title"
         app:layout_constraintTop_toTopOf="@+id/bottom_bg_image"
-        app:srcCompat="@android:drawable/ic_media_previous" />
+        app:srcCompat="@drawable/ic_prev" />
 
     <ImageButton
         android:id="@+id/btnPlay"
@@ -79,7 +79,7 @@
         app:layout_constraintEnd_toStartOf="@+id/btnNext"
         app:layout_constraintStart_toEndOf="@+id/btnPrev"
         app:layout_constraintTop_toTopOf="@+id/bottom_bg_image"
-        app:srcCompat="@android:drawable/ic_media_play" />
+        app:srcCompat="@drawable/ic_play" />
 
     <ImageButton
         android:id="@+id/btnNext"
@@ -93,6 +93,6 @@
         app:layout_constraintEnd_toEndOf="@+id/bottom_bg_image"
         app:layout_constraintStart_toEndOf="@id/btnPlay"
         app:layout_constraintTop_toTopOf="@+id/bottom_bg_image"
-        app:srcCompat="@android:drawable/ic_media_next" />
+        app:srcCompat="@drawable/ic_next" />
 
 </android.support.constraint.ConstraintLayout>
