--- a/app/src/main/res/layout/bottomsheet_closed.xml
+++ b/app/src/main/res/layout/bottomsheet_closed.xml
@@ -4,21 +4,54 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/bottom_layout"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="64dp"
+    android:layout_gravity="bottom"
+    android:background="@drawable/bottomsheet_bg"
+    android:clickable="true"
+    android:onClick="onBottomSheetPressed"
     tools:context=".MainActivity">
 
-    <ImageView
-        android:id="@+id/bottom_bg_image"
-        android:layout_width="0dp"
-        android:layout_height="64dp"
-        android:clickable="true"
-        android:onClick="onBottomSheetPressed"
+    <ImageButton
+        android:id="@+id/btnPrev"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="16dp"
+        android:background="@android:color/transparent"
+        android:onClick="onBtnPrevPressed"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/btnPlay"
+        app:layout_constraintStart_toEndOf="@+id/bottom_song_title"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/ic_prev" />
+
+    <ImageButton
+        android:id="@+id/btnPlay"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp"
+        android:background="@android:color/transparent"
+        android:onClick="onBtnPlayPressed"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/btnNext"
+        app:layout_constraintStart_toEndOf="@+id/btnPrev"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/ic_play" />
+
+    <ImageButton
+        android:id="@+id/btnNext"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="16dp"
+        android:background="@android:color/transparent"
+        android:onClick="onBtnNextPressed"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintStart_toEndOf="@id/btnPlay"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="1.0"
-        app:srcCompat="@drawable/bottomsheet_bg" />
+        app:srcCompat="@drawable/ic_next" />
 
     <ImageView
         android:id="@+id/bottom_album_image"
@@ -28,11 +61,11 @@
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
-        app:layout_constraintBottom_toBottomOf="@id/bottom_bg_image"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/bottom_song_title"
-        app:layout_constraintStart_toEndOf="@+id/bottom_bg_image"
-        app:layout_constraintStart_toStartOf="@id/bottom_bg_image"
-        app:layout_constraintTop_toTopOf="@id/bottom_bg_image"
+        app:layout_constraintStart_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@mipmap/ic_launcher_round" />
 
     <TextView
@@ -48,51 +81,9 @@
         android:scrollHorizontally="true"
         android:singleLine="true"
         android:text="TextView"
-        app:layout_constraintBottom_toBottomOf="@+id/bottom_bg_image"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/btnPrev"
         app:layout_constraintStart_toEndOf="@+id/bottom_album_image"
-        app:layout_constraintTop_toTopOf="@+id/bottom_bg_image" />
-
-    <ImageButton
-        android:id="@+id/btnPrev"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginEnd="16dp"
-        android:background="@android:color/transparent"
-        android:onClick="onBtnPrevPressed"
-        app:layout_constraintBottom_toBottomOf="@+id/bottom_bg_image"
-        app:layout_constraintEnd_toStartOf="@+id/btnPlay"
-        app:layout_constraintStart_toEndOf="@+id/bottom_song_title"
-        app:layout_constraintTop_toTopOf="@+id/bottom_bg_image"
-        app:srcCompat="@drawable/ic_prev" />
-
-    <ImageButton
-        android:id="@+id/btnPlay"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginEnd="8dp"
-        android:background="@android:color/transparent"
-        android:onClick="onBtnPlayPressed"
-        app:layout_constraintBottom_toBottomOf="@+id/bottom_bg_image"
-        app:layout_constraintEnd_toStartOf="@+id/btnNext"
-        app:layout_constraintStart_toEndOf="@+id/btnPrev"
-        app:layout_constraintTop_toTopOf="@+id/bottom_bg_image"
-        app:srcCompat="@drawable/ic_play" />
-
-    <ImageButton
-        android:id="@+id/btnNext"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginEnd="16dp"
-        android:background="@android:color/transparent"
-        android:onClick="onBtnNextPressed"
-        app:layout_constraintBottom_toBottomOf="@+id/bottom_bg_image"
-        app:layout_constraintEnd_toEndOf="@+id/bottom_bg_image"
-        app:layout_constraintStart_toEndOf="@id/btnPlay"
-        app:layout_constraintTop_toTopOf="@+id/bottom_bg_image"
-        app:srcCompat="@drawable/ic_next" />
+        app:layout_constraintTop_toTopOf="parent" />
 
 </android.support.constraint.ConstraintLayout>
