--- a/app/src/main/res/menu/popup_menu.xml
+++ b/app/src/main/res/menu/popup_menu.xml
@@ -10,7 +10,7 @@
         android:title="@string/menu_about" />
     <item
         android:id="@+id/app_bar_search"
-        android:icon="@drawable/ic_search_black_24dp"
+        android:icon="@drawable/ic_search"
         android:title="Search"
         app:showAsAction="always"
         app:actionViewClass="android.widget.SearchView" ></item>
