--- a/app/src/main/res/layout/bottomsheet_open.xml
+++ b/app/src/main/res/layout/bottomsheet_open.xml
@@ -5,22 +5,19 @@
     android:id="@+id/bottom_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:animateLayoutChanges="true"
     android:background="@drawable/bottomsheet_bg"
-    android:paddingStart="8dp"
-    android:paddingLeft="8dp"
-    android:paddingTop="16dp"
-    android:paddingEnd="8dp"
-    android:paddingRight="8dp"
-    android:paddingBottom="8dp"
     android:clickable="true"
+    android:padding="8dp"
     tools:context=".MainActivity">
 
     <ImageButton
         android:id="@+id/btnShuffle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
+        android:layout_marginStart="8dp"
         android:background="@android:color/transparent"
+        android:onClick="onBtnShufflePressed"
         app:layout_constraintBottom_toBottomOf="@id/btnPrev"
         app:layout_constraintEnd_toStartOf="@+id/btnPrev"
         app:layout_constraintStart_toStartOf="parent"
@@ -50,7 +47,7 @@
         app:layout_constraintBottom_toTopOf="@id/guideline"
         app:layout_constraintEnd_toStartOf="@id/btnNext"
         app:layout_constraintStart_toEndOf="@id/btnPrev"
-        app:layout_constraintTop_toBottomOf="@id/bottom_song_title"
+        app:layout_constraintTop_toBottomOf="@id/bottom_artist_name"
         app:srcCompat="@drawable/ic_play" />
 
     <ImageButton
@@ -69,8 +66,9 @@
         android:id="@+id/btnRepeat"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="16dp"
+        android:layout_marginEnd="8dp"
         android:background="@android:color/transparent"
+        android:onClick="onBtnRepeatPressed"
         app:layout_constraintBottom_toBottomOf="@id/btnNext"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@id/btnNext"
@@ -81,26 +79,25 @@
         android:id="@+id/btnHide"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
         android:layout_marginEnd="32dp"
         android:background="#00FFFFFF"
         android:onClick="onBottomSheetHidePressed"
-        android:rotation="-90"
         app:layout_constraintBottom_toBottomOf="@+id/bottom_album_image"
         app:layout_constraintEnd_toStartOf="@id/bottom_album_image"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.0"
-        app:srcCompat="?attr/homeAsUpIndicator" />
+        app:srcCompat="@drawable/ic_arrow_down" />
 
     <ImageView
         android:id="@+id/bottom_album_image"
-        android:layout_width="200dp"
-        android:layout_height="200dp"
+        android:layout_width="180dp"
+        android:layout_height="180dp"
         android:layout_marginStart="32dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="8dp"
         android:layout_marginEnd="32dp"
         android:layout_marginBottom="8dp"
         app:layout_constraintBottom_toTopOf="@id/bottom_song_title"
@@ -113,32 +110,42 @@
         android:id="@+id/bottom_song_title"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
+        android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
-        android:layout_marginEnd="16dp"
-        android:layout_marginBottom="8dp"
+        android:layout_marginEnd="8dp"
         android:ellipsize="marquee"
-        android:text="TextView"
+        android:marqueeRepeatLimit="marquee_forever"
+        android:scrollHorizontally="true"
+        android:singleLine="true"
+        android:text="Very Long Song Title"
         android:textAlignment="center"
+        android:textColor="@color/colorPrimaryText"
         android:textSize="24sp"
-        app:layout_constraintBottom_toTopOf="@id/btnPlay"
+        app:layout_constraintBottom_toTopOf="@id/bottom_artist_name"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/bottom_album_image" />
 
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/bottom_queue_recycler"
+    <TextView
+        android:id="@+id/bottom_artist_name"
         android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="16dp"
-        android:layout_marginBottom="16dp"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginBottom="8dp"
+        android:ellipsize="marquee"
+        android:marqueeRepeatLimit="marquee_forever"
+        android:scrollHorizontally="true"
+        android:singleLine="true"
+        android:text="Artist Name"
+        android:textAlignment="center"
+        android:textColor="#555555"
+        android:textSize="18sp"
+        app:layout_constraintBottom_toTopOf="@id/btnPlay"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/guideline" />
+        app:layout_constraintTop_toBottomOf="@id/bottom_song_title" />
 
     <android.support.constraint.Guideline
         android:id="@+id/guideline"
@@ -146,4 +153,17 @@
         android:layout_height="0dp"
         android:orientation="horizontal"
         app:layout_constraintGuide_percent="0.5" />
+
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/bottom_queue_recycler"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginBottom="8dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/guideline" />
 </android.support.constraint.ConstraintLayout>
