--- a/app/src/main/res/menu/popup_menu.xml
+++ b/app/src/main/res/menu/popup_menu.xml
@@ -4,7 +4,7 @@
 
     <item
         android:id="@+id/menu_item_settings"
-        android:title="@string/menu_settings" />
+        android:title="Rescan Music Library" />
     <item
         android:id="@+id/menu_item_about"
         android:title="@string/menu_about" />
