no more hardcoded text ; more translation ; replace unknown

--- a/app/src/main/res/layout/bottomsheet_closed.xml
+++ b/app/src/main/res/layout/bottomsheet_closed.xml
@@ -10,6 +10,7 @@
     android:background="@drawable/bottomsheet_bg"
     android:clickable="true"
     android:elevation="100dp"
+    android:focusable="true"
     android:onClick="onBottomSheetPressed"
     tools:context=".MainActivity">
 
@@ -20,6 +21,7 @@
         android:layout_marginStart="8dp"
         android:layout_marginEnd="16dp"
         android:background="@android:color/transparent"
+        android:contentDescription="@string/label_prev"
         android:onClick="onBtnPrevPressed"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/btnPlay"
@@ -34,6 +36,7 @@
         android:layout_marginStart="8dp"
         android:layout_marginEnd="8dp"
         android:background="@android:color/transparent"
+        android:contentDescription="@string/label_play"
         android:onClick="onBtnPlayPressed"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/btnNext"
@@ -48,6 +51,7 @@
         android:layout_marginStart="16dp"
         android:layout_marginEnd="16dp"
         android:background="@android:color/transparent"
+        android:contentDescription="@string/label_next"
         android:onClick="onBtnNextPressed"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -63,6 +67,7 @@
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
+        android:contentDescription="@string/album_image_description"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/bottom_song_title_compact"
         app:layout_constraintStart_toEndOf="parent"
@@ -78,11 +83,12 @@
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
+        android:contentDescription="@string/song_compact_placeholder"
         android:ellipsize="marquee"
         android:marqueeRepeatLimit="marquee_forever"
         android:scrollHorizontally="true"
         android:singleLine="true"
-        android:text="Song Name - Artist Name"
+        android:text="@string/song_compact_placeholder"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/btnPrev"
         app:layout_constraintStart_toEndOf="@+id/bottom_album_image"
