--- a/app/src/main/res/layout/bottomsheet_open.xml
+++ b/app/src/main/res/layout/bottomsheet_open.xml
@@ -9,7 +9,8 @@
     android:background="@drawable/bottomsheet_bg"
     android:clickable="true"
     android:padding="8dp"
-    tools:context=".MainActivity">
+    tools:context=".MainActivity"
+    android:focusable="true">
 
     <ImageButton
         android:id="@+id/btnShuffle"
@@ -17,6 +18,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:background="@android:color/transparent"
+        android:contentDescription="@string/label_shuffle"
         android:onClick="onBtnShufflePressed"
         app:layout_constraintBottom_toBottomOf="@id/btnPrev"
         app:layout_constraintEnd_toStartOf="@+id/btnPrev"
@@ -29,6 +31,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="@android:color/transparent"
+        android:contentDescription="@string/label_prev"
         android:onClick="onBtnPrevPressed"
         app:layout_constraintBottom_toBottomOf="@id/btnPlay"
         app:layout_constraintEnd_toStartOf="@+id/btnPlay"
@@ -43,6 +46,7 @@
         android:layout_marginTop="8dp"
         android:layout_marginBottom="8dp"
         android:background="@android:color/transparent"
+        android:contentDescription="@string/label_play"
         android:onClick="onBtnPlayPressed"
         app:layout_constraintBottom_toTopOf="@id/guideline"
         app:layout_constraintEnd_toStartOf="@id/btnNext"
@@ -55,6 +59,7 @@
         android:layout_width="wrap_content"
         android:layout_height="0dp"
         android:background="@android:color/transparent"
+        android:contentDescription="@string/label_next"
         android:onClick="onBtnNextPressed"
         app:layout_constraintBottom_toBottomOf="@id/btnPlay"
         app:layout_constraintEnd_toStartOf="@id/btnRepeat"
@@ -68,6 +73,7 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
         android:background="@android:color/transparent"
+        android:contentDescription="@string/label_repeat"
         android:onClick="onBtnRepeatPressed"
         app:layout_constraintBottom_toBottomOf="@id/btnNext"
         app:layout_constraintEnd_toEndOf="parent"
@@ -83,6 +89,7 @@
         android:layout_marginTop="8dp"
         android:layout_marginEnd="32dp"
         android:background="#00FFFFFF"
+        android:contentDescription="@string/label_hide"
         android:onClick="onBottomSheetHidePressed"
         app:layout_constraintBottom_toBottomOf="@+id/bottom_album_image"
         app:layout_constraintEnd_toStartOf="@id/bottom_album_image"
@@ -100,6 +107,7 @@
         android:layout_marginTop="8dp"
         android:layout_marginEnd="32dp"
         android:layout_marginBottom="8dp"
+        android:contentDescription="@string/album_image_description"
         app:layout_constraintBottom_toTopOf="@id/bottom_song_title"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -117,7 +125,7 @@
         android:marqueeRepeatLimit="marquee_forever"
         android:scrollHorizontally="true"
         android:singleLine="true"
-        android:text="Very Long Song Title"
+        android:text="@string/song_placeholder"
         android:textAlignment="center"
         android:textColor="@color/colorPrimaryText"
         android:textSize="24sp"
@@ -138,7 +146,7 @@
         android:marqueeRepeatLimit="marquee_forever"
         android:scrollHorizontally="true"
         android:singleLine="true"
-        android:text="Artist Name"
+        android:text="@string/artist_placeholder"
         android:textAlignment="center"
         android:textColor="#555555"
         android:textSize="18sp"
