--- a/app/src/main/res/layout/recycler_header.xml
+++ b/app/src/main/res/layout/recycler_header.xml
@@ -19,6 +19,7 @@
             android:id="@+id/recycler_header_image"
             android:layout_width="48dp"
             android:layout_height="48dp"
+            android:contentDescription="@string/album_image_description"
             app:srcCompat="@mipmap/ic_launcher"
             tools:layout_editor_absoluteX="40dp"
             tools:layout_editor_absoluteY="32dp" />
@@ -31,7 +32,7 @@
             android:layout_weight="1"
             android:gravity="center_vertical"
             android:singleLine="true"
-            android:text="TextView"
+            android:text="@string/album_placeholder"
             android:textSize="18sp"
             tools:layout_editor_absoluteX="136dp"
             tools:layout_editor_absoluteY="32dp" />
@@ -42,6 +43,7 @@
             android:layout_height="match_parent"
             android:layout_weight="4"
             android:background="#00FFFFFF"
+            android:contentDescription="@string/label_hide"
             android:padding="8dp"
             app:srcCompat="@android:drawable/arrow_up_float" />
     </LinearLayout>
