--- a/app/src/main/res/layout/recycler_item.xml
+++ b/app/src/main/res/layout/recycler_item.xml
@@ -12,6 +12,7 @@
         android:id="@+id/recycler_item_image"
         android:layout_width="48dp"
         android:layout_height="48dp"
+        android:contentDescription="@string/album_image_description"
         app:srcCompat="@mipmap/ic_launcher"
         tools:layout_editor_absoluteX="40dp"
         tools:layout_editor_absoluteY="32dp" />
@@ -20,7 +21,8 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
-        android:paddingStart="8dp">
+        android:paddingStart="8dp"
+        android:paddingEnd="8dp">
 
         <TextView
             android:id="@+id/recycler_item_title"
@@ -29,7 +31,7 @@
             android:layout_weight="2"
             android:gravity="center_vertical"
             android:singleLine="true"
-            android:text="TextView"
+            android:text="@string/song_placeholder"
             android:textSize="18sp"
             tools:layout_editor_absoluteX="136dp"
             tools:layout_editor_absoluteY="32dp" />
@@ -41,7 +43,7 @@
             android:layout_weight="1"
             android:gravity="center_vertical"
             android:singleLine="true"
-            android:text="TextView"
+            android:text="@string/artist_placeholder"
             android:textSize="12sp"
             tools:layout_editor_absoluteX="135dp"
             tools:layout_editor_absoluteY="72dp" />
