--- a/app/src/main/res/menu/popup_menu.xml
+++ b/app/src/main/res/menu/popup_menu.xml
@@ -4,14 +4,14 @@
 
     <item
         android:id="@+id/menu_item_settings"
-        android:title="Rescan Music Library" />
+        android:title="@string/rescan_library" />
     <item
         android:id="@+id/menu_item_about"
         android:title="@string/menu_about" />
     <item
         android:id="@+id/app_bar_search"
         android:icon="@drawable/ic_search"
-        android:title="Search"
-        app:showAsAction="always"
-        app:actionViewClass="android.widget.SearchView" ></item>
+        android:title="@android:string/search_go"
+        app:actionViewClass="android.widget.SearchView"
+        app:showAsAction="always"></item>
 </menu>
