search working (if sqlite db is ready)

--- a/app/src/main/res/navigation/navgraph.xml
+++ b/app/src/main/res/navigation/navgraph.xml
@@ -37,6 +37,18 @@
         <action
             android:id="@+id/action_to_settings"
             app:destination="@id/settingsActivity"
+            app:enterAnim="@anim/nav_default_enter_anim"
+            app:exitAnim="@anim/nav_default_exit_anim"
+            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
+            app:popExitAnim="@anim/nav_default_pop_exit_anim"
+            app:popUpTo="@+id/destination_main" />
+        <action
+            android:id="@+id/action_to_search"
+            app:destination="@id/destination_search"
+            app:enterAnim="@anim/nav_default_enter_anim"
+            app:exitAnim="@anim/nav_default_exit_anim"
+            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
+            app:popExitAnim="@anim/nav_default_pop_exit_anim"
             app:popUpTo="@+id/destination_main" />
     </fragment>
     <fragment
@@ -71,4 +83,25 @@
         android:name="de.dascapschen.android.jeanne.SettingsActivity"
         android:label="activity_settings"
         tools:layout="@layout/activity_settings" />
+    <fragment
+        android:id="@+id/destination_search"
+        android:name="de.dascapschen.android.jeanne.fragments.SearchFragment"
+        android:label="fragment_search" >
+        <action
+            android:id="@+id/action_search_to_artist"
+            app:destination="@id/destination_artist_detail"
+            app:enterAnim="@anim/nav_default_enter_anim"
+            app:exitAnim="@anim/nav_default_exit_anim"
+            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
+            app:popExitAnim="@anim/nav_default_pop_exit_anim"
+            app:popUpTo="@+id/destination_search" />
+        <action
+            android:id="@+id/action_search_to_album"
+            app:destination="@id/destination_album_detail"
+            app:enterAnim="@anim/nav_default_enter_anim"
+            app:exitAnim="@anim/nav_default_exit_anim"
+            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
+            app:popExitAnim="@anim/nav_default_pop_exit_anim"
+            app:popUpTo="@+id/destination_search" />
+    </fragment>
 </navigation>
