--- a/app/src/main/res/menu/popup_menu.xml
+++ b/app/src/main/res/menu/popup_menu.xml
@@ -8,10 +8,14 @@
     <item
         android:id="@+id/menu_item_about"
         android:title="@string/menu_about" />
+
+
     <item
         android:id="@+id/app_bar_search"
         android:icon="@drawable/ic_search"
+        android:iconTint="@color/white"
         android:title="@android:string/search_go"
         app:actionViewClass="android.widget.SearchView"
-        app:showAsAction="always"></item>
+        app:showAsAction="always"/>
+
 </menu>
